--- a/src/main/resources/templates/produtoAdd.html
+++ b/src/main/resources/templates/produtoAdd.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class="form-group row">
                     <button type="submit" class="btn btn-sm btn-primary">Salvar</button>
-                    <a th:href="@{/}" class="btn btn-sm btn-default">Cancelar</a>
+                    <a th:href="@{produto}" class="btn btn-sm btn-default">Cancelar</a>
                 </div>
             </form>
         </div>
